--- a/index.html
+++ b/index.html
@@ -417,10 +417,93 @@
           </ul>
         </div>
       </section>
+      <div class="modal-overlay">
+        <div class="modal">
+          <button class="modal-button-close" type="button">
+            <svg class="modal-icon-close" widht="24" height="24">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <p class="modal-title">
+            Leave your contacts and we will call you back
+          </p>
+          <form class="modal-form-field" method="post">
+            <div class="modal-form-big-wrapper">
+              <label class="modal-form-label" for="username">Name</label>
+              <div class="modal-form-wrapper">
+                <input
+                  class="modal-form-input"
+                  type="text"
+                  name="username"
+                  id="username"
+                />
+                <svg class="input-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-person"></use>
+                </svg>
+              </div>
+            </div>
+            <div class="modal-form-big-wrapper">
+              <label class="modal-form-label" for="phone_number">Phone</label>
+              <div class="modal-form-wrapper">
+                <input
+                  class="modal-form-input"
+                  type="tel"
+                  name="phone_number"
+                  id="phone_number"
+                />
+                <svg class="input-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-phone"></use>
+                </svg>
+              </div>
+            </div>
+            <div class="modal-form-big-wrapper">
+              <label class="modal-form-label" for="user_email">E-mail</label>
+              <div class="modal-form-wrapper">
+                <input
+                  class="modal-form-input"
+                  type="email"
+                  name="user_email"
+                  id="user_email"
+                />
+                <svg class="input-icon" width="18" height="24">
+                  <use href="./images/icons.svg#icon-email"></use>
+                </svg>
+              </div>
+            </div>
+            <label class="modal-form-label" for="comment">Comment</label>
+            <textarea
+              class="modal-form-txtarea"
+              rows="5"
+              name="comment"
+              id="comment"
+              placeholder="Text input"
+            ></textarea>
+            <div class="checkbox-field">
+              <input
+                class="visually-hidden"
+                type="checkbox"
+                name="policy"
+                id="policy"
+                value="true"
+              />
+              <label class="modal-form-label" for="policy">
+                <span class="icon-span">
+                  <svg class="checkbox-icon" width="10" heigth="8">
+                    <use href="./images/icons.svg#icon-tick"></use>
+                  </svg>
+                </span>
+                I accept the terms and conditions of the
+                <a class="privacy-policy" href="">Privacy Policy</a></label
+              >
+            </div>
+            <button class="modal-button-send" type="submit">Send</button>
+          </form>
+        </div>
+      </div>
     </main>
     <footer class="footer">
       <div class="container">
-        <div class="footer-container">
+        <div class="footer-logo-container">
           <a class="footer-logo" href="./index.html" target="_blank"
             >Web<span class="footer-logo-accent">Studio</span></a
           >
@@ -429,9 +512,8 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="footer-container">
-          <p class="footer-text-social-media">Social media</p>
-
+        <div class="socials-container">
+          <p class="footer-paragraph">Social media</p>
           <ul class="footer-icon-list">
             <li class="footer-icon-item">
               <a href="" class="footer-link">
@@ -463,6 +545,24 @@
             </li>
           </ul>
         </div>
+        <form class="form-field">
+          <label for="user_email" class="form-label">Subscribe</label>
+          <div class="input-button-wrapper">
+            <input
+              class="form-input"
+              type="email"
+              name="user_email"
+              id="user_email"
+              placeholder="E-mail"
+            />
+            <button class="form-button" type="submit">
+              <p class="form-button-text">Subscribe</p>
+              <svg class="form-button-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
