--- a/index.html
+++ b/index.html
@@ -417,7 +417,74 @@
           </ul>
         </div>
       </section>
-      <div class="modal-overlay">
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-logo-container">
+          <a class="footer-logo" href="./index.html" target="_blank"
+            >Web<span class="footer-logo-accent">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="socials-container">
+          <p class="footer-paragraph">Social media</p>
+          <ul class="footer-icon-list">
+            <li class="footer-icon-item">
+              <a href="" class="footer-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a href="" class="footer-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a href="" class="footer-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a href="" class="footer-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="form-container">
+          <p class="footer-paragraph">Subscribe</p>
+          <form class="form-field">
+            <label for="user_email" class="form-label">
+              <input
+                class="form-input"
+                type="email"
+                name="user_email"
+                id="user_email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="form-button" type="submit">
+              <p class="form-button-text">Subscribe</p>
+              <svg class="form-button-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
+      </div>
+    </footer>
+      <div class="modal-overlay"></div>
         <div class="modal">
           <button class="modal-button-close" type="button">
             <svg class="modal-icon-close" widht="24" height="24">
@@ -500,70 +567,5 @@
           </form>
         </div>
       </div>
-    </main>
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-logo-container">
-          <a class="footer-logo" href="./index.html" target="_blank"
-            >Web<span class="footer-logo-accent">Studio</span></a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <div class="socials-container">
-          <p class="footer-paragraph">Social media</p>
-          <ul class="footer-icon-list">
-            <li class="footer-icon-item">
-              <a href="" class="footer-link">
-                <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram-2"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-icon-item">
-              <a href="" class="footer-link">
-                <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-icon-item">
-              <a href="" class="footer-link">
-                <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-icon-item">
-              <a href="" class="footer-link">
-                <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin-1"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <form class="form-field">
-          <label for="user_email" class="form-label">Subscribe</label>
-          <div class="input-button-wrapper">
-            <input
-              class="form-input"
-              type="email"
-              name="user_email"
-              id="user_email"
-              placeholder="E-mail"
-            />
-            <button class="form-button" type="submit">
-              <p class="form-button-text">Subscribe</p>
-              <svg class="form-button-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-send"></use>
-              </svg>
-            </button>
-          </div>
-        </form>
-      </div>
-    </footer>
   </body>
 </html>
