--- a/index.html
+++ b/index.html
@@ -465,12 +465,12 @@
         <div class="form-container">
           <p class="footer-paragraph">Subscribe</p>
           <form class="form-field">
-            <label for="user_email_subscribe" class="form-label">
+            <label for="footer_email" class="form-label">
               <input
                 class="form-input"
                 type="email"
-                name="user_email_subscribe"
-                id="user_email_subscribe"
+                name="footer_email"
+                id="footer_email"
                 placeholder="E-mail"
               />
             </label>
@@ -484,85 +484,86 @@
         </div>
       </div>
     </footer>
-    <div class="modal-overlay"></div>
-    <div class="modal">
-      <button class="modal-button-close" type="button">
-        <svg class="modal-icon-close" width="24" height="24">
-          <use href="./images/icons.svg#icon-close"></use>
-        </svg>
-      </button>
-      <p class="modal-title">Leave your contacts and we will call you back</p>
-      <form class="modal-form-field" method="post">
-        <div class="modal-form-big-wrapper">
-          <label class="modal-form-label" for="username">Name</label>
-          <div class="modal-form-wrapper">
-            <input
-              class="modal-form-input"
-              type="text"
-              name="username"
-              id="username"
-            />
-            <svg class="input-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-person"></use>
-            </svg>
-          </div>
-        </div>
-        <div class="modal-form-big-wrapper">
-          <label class="modal-form-label" for="phone_number">Phone</label>
-          <div class="modal-form-wrapper">
-            <input
-              class="modal-form-input"
-              type="tel"
-              name="phone_number"
-              id="phone_number"
-            />
-            <svg class="input-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-phone"></use>
-            </svg>
-          </div>
-        </div>
-        <div class="modal-form-big-wrapper">
-          <label class="modal-form-label" for="user_email">E-mail</label>
-          <div class="modal-form-wrapper">
-            <input
-              class="modal-form-input"
-              type="email"
-              name="user_email"
-              id="user_email"
-            />
-            <svg class="input-icon" width="18" height="24">
-              <use href="./images/icons.svg#icon-email"></use>
-            </svg>
-          </div>
-        </div>
-        <label class="modal-form-label" for="comment">Comment</label>
-        <textarea
-          class="modal-form-txtarea"
-          rows="5"
-          name="comment"
-          id="comment"
-          placeholder="Text input"
-        ></textarea>
-        <div class="checkbox-field">
-          <input
-            class="visually-hidden"
-            type="checkbox"
-            name="policy"
-            id="policy"
-            value="true"
-          />
-          <label class="modal-form-label" for="policy">
-            <span class="icon-span">
-              <svg class="checkbox-icon" width="10" height="8">
-                <use href="./images/icons.svg#icon-tick"></use>
+    <div class="modal-overlay">
+      <div class="modal">
+        <button class="modal-button-close" type="button">
+          <svg class="modal-icon-close" width="24" height="24">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form-field" method="post">
+          <div class="modal-form-big-wrapper">
+            <label class="modal-form-label" for="username">Name</label>
+            <div class="modal-form-wrapper">
+              <input
+                class="modal-form-input"
+                type="text"
+                name="username"
+                id="username"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
               </svg>
-            </span>
-            I accept the terms and conditions of the
-            <a class="privacy-policy" href="">Privacy Policy</a></label
-          >
-        </div>
-        <button class="modal-button-send" type="submit">Send</button>
-      </form>
+            </div>
+          </div>
+          <div class="modal-form-big-wrapper">
+            <label class="modal-form-label" for="phone_number">Phone</label>
+            <div class="modal-form-wrapper">
+              <input
+                class="modal-form-input"
+                type="tel"
+                name="phone_number"
+                id="phone_number"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-big-wrapper">
+            <label class="modal-form-label" for="user_email">E-mail</label>
+            <div class="modal-form-wrapper">
+              <input
+                class="modal-form-input"
+                type="email"
+                name="user_email"
+                id="user_email"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <label class="modal-form-label" for="comment">Comment</label>
+          <textarea
+            class="modal-form-txtarea"
+            rows="5"
+            name="comment"
+            id="comment"
+            placeholder="Text input"
+          ></textarea>
+          <div class="checkbox-field">
+            <input
+              class="visually-hidden"
+              type="checkbox"
+              name="policy"
+              id="policy"
+              value="true"
+            />
+            <label class="modal-form-label" for="policy">
+              <span class="icon-span">
+                <svg class="checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-tick"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="privacy-policy" href="">Privacy Policy</a></label
+            >
+          </div>
+          <button class="modal-button-send" type="submit">Send</button>
+        </form>
+      </div>
     </div>
   </body>
 </html>
