--- a/index.html
+++ b/index.html
@@ -487,20 +487,20 @@
     <div class="modal-overlay">
       <div class="modal">
         <button class="modal-button-close" type="button">
-          <svg class="modal-icon-close" width="24" height="24">
+          <svg class="modal-icon-close" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form-field" method="post">
           <div class="modal-form-big-wrapper">
-            <label class="modal-form-label" for="username">Name</label>
+            <label class="modal-form-label" for="user-name">Name</label>
             <div class="modal-form-wrapper">
               <input
                 class="modal-form-input"
                 type="text"
-                name="username"
-                id="username"
+                name="user-name"
+                id="user-name"
               />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
@@ -522,7 +522,7 @@
             </div>
           </div>
           <div class="modal-form-big-wrapper">
-            <label class="modal-form-label" for="user_email">E-mail</label>
+            <label class="modal-form-label" for="user_email">Email</label>
             <div class="modal-form-wrapper">
               <input
                 class="modal-form-input"
