--- a/index.html
+++ b/index.html
@@ -465,12 +465,12 @@
         <div class="form-container">
           <p class="footer-paragraph">Subscribe</p>
           <form class="form-field">
-            <label for="footer_email" class="form-label">
+            <label for="footer-email" class="form-label">
               <input
                 class="form-input"
                 type="email"
-                name="footer_email"
-                id="footer_email"
+                name="footer-email"
+                id="footer-email"
                 placeholder="E-mail"
               />
             </label>
@@ -508,13 +508,13 @@
             </div>
           </div>
           <div class="modal-form-big-wrapper">
-            <label class="modal-form-label" for="phone_number">Phone</label>
+            <label class="modal-form-label" for="phone-number">Phone</label>
             <div class="modal-form-wrapper">
               <input
                 class="modal-form-input"
                 type="tel"
-                name="phone_number"
-                id="phone_number"
+                name="phone-number"
+                id="phone-number"
               />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
@@ -522,36 +522,38 @@
             </div>
           </div>
           <div class="modal-form-big-wrapper">
-            <label class="modal-form-label" for="user_email">Email</label>
+            <label class="modal-form-label" for="user-email">Email</label>
             <div class="modal-form-wrapper">
               <input
                 class="modal-form-input"
                 type="email"
-                name="user_email"
-                id="user_email"
+                name="user-email"
+                id="user-email"
               />
               <svg class="input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
-          <label class="modal-form-label" for="comment">Comment</label>
-          <textarea
-            class="modal-form-txtarea"
-            rows="5"
-            name="comment"
-            id="comment"
-            placeholder="Text input"
-          ></textarea>
+          <div class="txtarea-container">
+            <label class="modal-form-label" for="user-comment">Comment</label>
+            <textarea
+              class="modal-form-txtarea"
+              rows="5"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
           <div class="checkbox-field">
             <input
               class="visually-hidden"
               type="checkbox"
-              name="policy"
-              id="policy"
+              name="user-privacy"
+              id="user-privacy"
               value="true"
             />
-            <label class="modal-form-label" for="policy">
+            <label class="modal-form-label" for="user-privacy">
               <span class="icon-span">
                 <svg class="checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-tick"></use>
